<?xml version="1.0"?>
<package format="3">
  <name>way_point_following</name>
  <version>0.0.0</version>
  <description>
    A ROS2 node that gently drives the robot toward a goal point, stopping when the robot is within 1.7 meters and 10 degrees of the target.
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Tool Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build/Exec Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
